# repostudio

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: release-drafter.yml
.github/workflows/: build.yml
src/: App.css  App.tsx  Themes.css  main.tsx
src-tauri/: 2  Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commandsold.rs  db.rs  dbold.rs  lib.rs  main.rs
src-tauri/src/background/: folder_watcher.rs  mod.rs
src-tauri/src/commands/: README.md  actions.rs  audio_ops.rs  db.rs  file_ops.rs  mod.rs  structures.rs
src/components/: AudioPlayer.css  AudioPlayer.tsx  FilePane.css  FilePane.tsx  Popup.tsx  PropertiesPane.css  PropertiesPane.tsx  RepositorySelector.css  RepositorySelector.tsx  WindowBar.css  WindowBar.tsx  store.tsx
src/components/AudioPlayer/: AudioPlayer.css  AudioPlayer.tsx
src/components/FileBrowser/: FilePane.css  FilePane.tsx
src/components/Layout/: MultiInput.css  MultiInput.tsx  Popup.tsx  WindowBar.css  WindowBar.tsx
src/components/MainWindow/AudioPlayer/: AudioPlayer.css  AudioPlayer.tsx
src/components/RepositoryBrowser/: RepositorySelector.css  RepositorySelector.tsx
src/components/SettingsWindow/: Settings.css  Settings.tsx
src/scripts/: ConsoleOperations.tsx  FileOperations.tsx  RepoOperations.tsx  fingerprintProcessing.tsx  store.tsx
src/scripts/store/: ConsoleOperations.tsx  EventLogger.tsx  store.tsx
src/types/: ObjectTypes.tsx
(+52 files in other folders)
