[package]
name = "Repo-Studio"
version = "0.1.2"
description = "A Git-like desktop app for managing and versioning audio files."
authors = ["John Kearney"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repostudio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tauri-plugin-dialog = "2"
chrono = "0.4.40"
uuid = "1.15.1"
tauri-plugin-fs = "2.0.0"
regex = "1"
anyhow = "1.0"
symphonia = { version = "0.5", features = ["default", "mp3", "wav", "flac", "ogg"] }
rusty-chromaprint = "0.3"
lofty = "0.22.2" 
notify = "8.0.0"
lazy_static = "1.5"
once_cell = "1.21.1"
